--- a/webapps/ROOT/WEB-INF/classes/templates/modules/content/fastinfo_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/content/fastinfo_list.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" href="${request.contextPath}/statics/css/element.css">
 <title>24h快讯管理</title>
+
 </head>
 <body>
     <#include "/header.html">
@@ -77,7 +78,11 @@
         <div class="cv_content_square">
             <el-table :data="tableData" style="width: 100%; margin:10px auto;" stripe>
                 <el-table-column prop="flashId" label="ID" width="90"></el-table-column>
-                <el-table-column prop="flashTitle" label="标题" width="220"></el-table-column>
+                <el-table-column prop="flashTitle" label="标题" width="220">
+                    <template v-if="scope.row.flashTitle" slot-scope="scope">
+                        <div v-text="scope.row.flashTitle" @click="openUrlFlashDetail(scope.row)" class="flashTitleStyle"></a>
+                    </template>
+                </el-table-column>
                 <el-table-column prop="flashSourceUrl" label="原文链接" width="200"></el-table-column>
                 <el-table-column prop="flashStatus" label="发布状态">
                     <!--0未发布，1是待发布，2是已发布 3是发布失败 4是待删除 5 删除-->
@@ -120,5 +125,15 @@
 <script type="text/javascript" src="${request.contextPath}/statics/js/element.js"></script>
 <script type="text/javascript" src="${request.contextPath}/statics/js/modules/content/fastinfo_list.js"></script>
 <script type="text/javascript" src="${request.contextPath}/statics/js/clockToast.js"></script>
+<style>
+    .flashTitleStyle {
+        color: #606266
+    }
+    .flashTitleStyle:hover {
+        color: #175CE9;
+        cursor: pointer;
+        text-decoration: underline;
+    }
 
+</style>
 </html>
