--- a/webapps/ROOT/WEB-INF/classes/templates/modules/resource/institution_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/resource/institution_list.html
@@ -42,7 +42,9 @@
                     <el-table-column prop="cooperationName" label="机构名称" width=""></el-table-column>
                     <el-table-column prop="cooperationImg" label="机构Logo" width="170">
                         <template v-if="scope.row.cooperationImg" slot-scope="scope">
-                            <img style="width:150px;height:45px;" :src="scope.row.cooperationImg">
+                            <div class="imgcontainer">
+                                <img :src="scope.row.cooperationImg">
+                            </div>
                         </template>
                     </el-table-column>
                     <el-table-column prop="cooperationCrtUserName" label="创建人" width="90"></el-table-column>
@@ -158,6 +160,19 @@
 <script type="text/javascript" src="${request.contextPath}/statics/js/clockToast.js"></script>
 
 <style>
+.imgcontainer{
+width:100px;
+height:50px;
+display:flex;
+align-items:center;
+justify-content:center;
+border:1px solid #bebebe;
+}
+.imgcontainer img{
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+}
 .avatar-uploader .el-upload {
     width:290px;
     border: 1px dashed #d9d9d9;
