--- a/webapps/ROOT/WEB-INF/classes/templates/modules/content/report_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/content/report_list.html
@@ -125,7 +125,7 @@
                 </el-table-column>
                 <el-table-column prop="reportReleaseTime" label="发布时间" width="95"></el-table-column>
                 <el-table-column prop="reportAuthor" label="作者"></el-table-column>
-                <el-table-column prop="userName" label="操作人/发布人"></el-table-column>
+                <el-table-column prop="modUserName" label="创建人/更新人"></el-table-column>
                 <el-table-column prop="reportCount" label="阅读量"></el-table-column>
                 <el-table-column label="操作" width="200" fixed="right">
                     <template slot-scope="scope" v-if="scope.row.reportStatus !== 1 && scope.row.reportStatus !== 4">
