--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/edit_meeting.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/edit_meeting.html
@@ -985,8 +985,7 @@
                                 <el-switch
                                     v-model="meetingForm.meetingJsonData.guestOpinion.isShowDefaultModel"
                                     active-text="显示"
-                                    inactive-text="隐藏"
-                                    @change="guestDefaultChange">
+                                    inactive-text="隐藏">
                                 </el-switch>
                             </el-form-item>
                         </el-col>
